clusters/sirius/apps/beszel/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: beszel
  labels:
    app.kubernetes.io/instance: beszel
    app.kubernetes.io/name: beszel
    app.kubernetes.io/service: beszel
spec:
  selector:
    app.kubernetes.io/instance: beszel
    app.kubernetes.io/name: beszel
  ports:
    - name: http
      protocol: TCP
      port: 8090
      targetPort: http
  type: ClusterIP
